<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="games">Games</string>
    <string name="roblox">Roblox</string>
    <string name="join">Join Millions of Experiences</string>
    <string name="ludo">Ludo King</string>
    <string name="recall">Recall your childhood!</string>
    <string name="what">What We\'re Playing</string>
    <string name="see">See All</string>
    <string name="Now_Available">NOW AVAILABLE</string>
    <string name="Fishdom">Fishdom</string>
    <string name="Jointheexpedition">Join The Expedition</string>
    <string name="Happening_Now">HAPPENING NOW</string>
    <string name="Angry_Birds2">Angry Birds 2</string>
    <string name="celebrate">Celebrate the 15th anniversary</string>
    <string name="must_play_games">Must-Play Games</string>
    <string name="welcomeb">Welcome Back</string>
    <string name="log">Login</string>
    <string name="don">Don\'t have an account?</string>
    <string name="welcome">Welcome</string>
    <string name="Sign">Sign Up</string>
    <string name="login">Log In</string>
    <string name="label">Name</string>
    <string name="one">1</string>
    <string name="C">C</string>
    <string name="plusorminus">+/-</string>
    <string name="percent">%</string>
    <string name="div">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="X">X</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="sign">Sign Up</string>
    <string name="app_name">APP</string>
    <string name="Logout">Logout</string>
    <string name="List">List of Items</string>
    <string name="application_name">Movie Review App</string>
    <string name="action_settings">Settings</string>
    <string name="name_movie">Movie Title</string>
    <string name="movie_details">Movie Details</string>
    <string name="plot">Plot Synopsis</string>
    <string name="rating">User Rating</string>
    <string name="release">Release Date</string>
    <string name="pref_sort_order_label">Sort Order</string>
    <string name="pref_sort_order_key">sortOrder</string>
    <string name="pref_most_popular">Most Popular</string>
    <string name="pref_highest_rated">Highest Rated</string>
</resources>