<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="13"
    android:background="@color/dark_grey"
    tools:context=".MainActivity3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/dark_grey"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

<!--            <Button-->
<!--                android:id="@+id/iconButton1"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginLeft="5dp"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:background="@android:color/holo_red_light"-->
<!--                app:cornerRadius="50sp"-->
<!--                />-->

<!--            <Button-->
<!--                android:id="@+id/iconButton2"-->
<!--                style="?attr/materialIconButtonFilledTonalStyle"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginLeft="5dp"-->
<!--                android:layout_marginTop="5dp"-->
<!--                 />-->

<!--            <Button-->
<!--                android:id="@+id/iconButton3"-->
<!--                style="?attr/materialIconButtonFilledTonalStyle"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginLeft="5dp"-->
<!--                android:layout_marginTop="5dp"-->

<!--                />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
            <TextView
                android:id="@+id/plain_text_input"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textSize="25pt"
                android:text="@string/one"
                android:paddingTop="10pt"
                android:textColor="@android:color/white"
                android:gravity="end"
            />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:weightSum="4"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:weightSum="2"
            android:background="@color/less_dark_grey"
            android:orientation="horizontal"
            android:layout_margin="2dp"

            >
            <TextView
                android:id="@+id/plain_text_input1"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/C"
                android:textSize="25pt"
                android:textAlignment="center"
                android:paddingTop="10pt"
                android:textColor="@android:color/white"
            />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/plusmin"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@color/less_dark_grey"
            android:layout_margin="1dp"
            >
            <TextView
                android:id="@+id/plain_text_input2"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/plusorminus"
                android:textSize="25pt"
                android:textAlignment="center"
                android:paddingTop="10pt"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/per"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@color/less_dark_grey"
            android:layout_margin="1dp"
            >
            <TextView
                android:id="@+id/plain_text_input3"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/percent"
                android:textSize="25pt"
                android:textAlignment="center"
                android:paddingTop="10pt"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/div"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@color/orange"
            android:layout_margin="1dp"
            >
            <TextView
                android:id="@+id/plain_text_input4"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/div"
                android:textSize="25pt"
                android:textAlignment="center"
                android:paddingTop="10pt"
                android:textColor="@android:color/white"
                />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_width="match_parent"
        >
        <LinearLayout
            android:id="@+id/seven"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@color/light_grey"
            android:layout_margin="1dp"
            >
            <TextView
                android:id="@+id/plain_text_input5"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/seven"
                android:textSize="25pt"
                android:textAlignment="center"
                android:paddingTop="10pt"
                android:textColor="@android:color/white"
                android:clickable="true"
                android:focusable="true"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/eight"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@color/light_grey"
            android:layout_margin="1dp"
            >
            <TextView
                android:id="@+id/plain_text_input6"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/eight"
                android:textSize="25pt"
                android:textAlignment="center"
                android:paddingTop="10pt"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/nine"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@color/light_grey"
            android:layout_margin="1dp"
            >
            <TextView
                android:id="@+id/plain_text_input7"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/nine"
                android:textSize="25pt"
                android:textAlignment="center"
                android:paddingTop="10pt"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/X"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@color/orange"
            android:layout_margin="1dp"
            >
            <TextView
                android:id="@+id/plain_text_input8"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/X"
                android:textSize="25pt"
                android:textAlignment="center"
                android:paddingTop="10pt"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_width="match_parent"
        >
        <LinearLayout
            android:id="@+id/Four"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@color/light_grey"
            android:layout_margin="1dp"
            >
            <TextView
                android:id="@+id/plain_text_input9"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/four"
                android:textSize="25pt"
                android:textAlignment="center"
                android:paddingTop="10pt"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/Five"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@color/light_grey"
            android:layout_margin="1dp"
            >
            <TextView
                android:id="@+id/plain_text_input10"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/five"
                android:textSize="25pt"
                android:textAlignment="center"
                android:paddingTop="10pt"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/Six"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@color/light_grey"
            android:layout_margin="1dp"
            >
            <TextView
                android:id="@+id/plain_text_input11"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/six"
                android:textSize="25pt"
                android:textAlignment="center"
                android:paddingTop="10pt"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/min"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@color/orange"
            android:layout_margin="1dp"
            >
            <TextView
                android:id="@+id/plain_text_input12"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/minus"
                android:textSize="25pt"
                android:textAlignment="center"
                android:paddingTop="10pt"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:id="@+id/One"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@color/light_grey"
            android:layout_margin="1dp"
            >
            <TextView
                android:id="@+id/plain_text_input13"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/one"
                android:textSize="25pt"
                android:textAlignment="center"
                android:paddingTop="10pt"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/Two"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@color/light_grey"
            android:layout_margin="1dp"
            >
            <TextView
                android:id="@+id/plain_text_input14"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/two"
                android:textSize="25pt"
                android:textAlignment="center"
                android:paddingTop="10pt"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/Three"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@color/light_grey"
            android:layout_margin="1dp"
            >
            <TextView
                android:id="@+id/plain_text_input15"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/three"
                android:textSize="25pt"
                android:textAlignment="center"
                android:paddingTop="10pt"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/plus"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@color/orange"
            android:layout_margin="2dp"
            >
            <TextView
                android:id="@+id/plain_text_input16"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/plus"
                android:textSize="25pt"
                android:textAlignment="center"
                android:paddingTop="8pt"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:weightSum="4"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:id="@+id/Zero"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:background="@color/light_grey"
            android:layout_margin="1dp"
            >
            <TextView
                android:id="@+id/plain_text_input17"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/zero"
                android:textSize="25pt"
                android:textAlignment="center"
                android:paddingTop="8pt"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dot"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@color/light_grey"
            android:layout_margin="1dp"
            >
            <TextView
                android:id="@+id/plain_text_input18"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/dot"
                android:textSize="25pt"
                android:textAlignment="center"
                android:paddingTop="10pt"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/eq"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@color/orange"
            android:layout_margin="1dp"
            >
            <TextView
                android:id="@+id/plain_text_input19"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/equal"
                android:textSize="30pt"
                android:textAlignment="center"
                android:paddingTop="8pt"
                android:textColor="@android:color/white"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>