<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plant"
    tools:context=".Activity.login_signup">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tenor_sans"
        android:text="@string/welcome"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="350dp"
        android:layout_height="63dp"
        android:backgroundTint="#60A9A9A7"
        android:fontFamily="@font/tenor_sans"
        android:text="@string/Sign"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Button
        android:id="@+id/button4"
        android:layout_width="350dp"
        android:layout_height="63dp"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="normal"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:backgroundTint="#60A9A9A7"
        android:fontFamily="@font/tenor_sans"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.252" />

</androidx.constraintlayout.widget.ConstraintLayout>