<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plant2"
    tools:context=".Activity.login">

    <TextView
        android:id="@+id/tvTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:fontFamily="cursive"
        android:text="@string/welcomeb"
        android:textColor="#06402B"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.401"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPassword1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:drawableStart="@drawable/baseline_assignment_ind_24"
        android:ems="14"
        android:fontFamily="@font/tenor_sans"
        android:inputType="textPassword"
        android:hint="Enter Password"
        android:drawablePadding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etMail1"
        app:layout_constraintStart_toStartOf="@+id/etMail1"
        app:layout_constraintTop_toBottomOf="@+id/etMail1"
        app:layout_constraintVertical_bias="0.123"
        android:textColorHint="#06402B"/>

    <EditText
        android:id="@+id/etMail1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="96dp"
        android:drawableStart="@drawable/baseline_attach_email_24"
        android:ems="14"
        android:fontFamily="@font/tenor_sans"
        android:inputType="textEmailAddress"
        android:hint="Enter Email"
        android:textColorHint="#06402B"
        android:drawablePadding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle1"
        app:layout_constraintStart_toStartOf="@+id/tvTitle1"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle1"
         />

    <Button
        android:id="@+id/button"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="#06402B"
        android:fontFamily="@font/tenor_sans"
        android:text="@string/log"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etPassword1"
        app:layout_constraintStart_toStartOf="@+id/etPassword1"
        app:layout_constraintTop_toBottomOf="@+id/etPassword1"
        app:layout_constraintVertical_bias="0.729" />

    <TextView
        android:id="@+id/tvLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/tenor_sans"
        android:text="@string/don"
        app:layout_constraintEnd_toStartOf="@+id/tvLast1"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/tvLast1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/tenor_sans"
        android:text="Sign Up"
        android:textColor="#06402B"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/tvLast"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/tvSubtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:textSize="15sp"
        android:textStyle="italic"
        android:fontFamily="@font/tenor_sans"
        android:text="Login to your account"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle1"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/tvTitle1"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle1"/>

    <CheckBox
        android:id="@+id/cbRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remember Me"
        android:textColor="#06402B"
        android:drawablePadding="15dp"
        android:drawableTint="#06402B"
        android:fontFamily="@font/tenor_sans"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/etPassword1"
        app:layout_constraintTop_toBottomOf="@+id/etPassword1" />

</androidx.constraintlayout.widget.ConstraintLayout>